--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "file-saver": "1.3.8",
     "font-awesome": "^4.7.0",
     "formidable": "^1.1.1",
+    "gulp": "^4.0.2",
     "gulp-sass": "^3.1.0",
     "i18n": "^0.8.3",
     "iconv-lite": "^0.4.19",
